--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestableWatcher.cs" />
+    <Compile Include="WatcherTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
