Implementa debounce para envio de alterações

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebouncerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestableWatcher.cs" />
     <Compile Include="WatcherTests.cs" />
