--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Change.cs" />
     <Compile Include="Debouncer.cs" />
+    <Compile Include="GalleryClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Watcher.cs" />
   </ItemGroup>
