--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebouncerTests.cs" />
+    <Compile Include="GalleryClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestableWatcher.cs" />
     <Compile Include="WatcherTests.cs" />
