--- a/src/Cli/Cli.csproj
+++ b/src/Cli/Cli.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\ProductAssemblyInfo.cs">
+      <Link>Properties\ProductAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\SyncCommand.cs" />
     <Compile Include="Options.cs" />
