Create AppVeyor deployment script

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 [Bb]in/
 [Oo]bj/
 build/
+artifacts/
 [Tt]est[Rr]esult.xml
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
