--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ChangeRequest.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Configuration.cs" />
     <Compile Include="Debouncer.cs" />
     <Compile Include="GalleryClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
