--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Debouncer.cs" />
     <Compile Include="GalleryClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Watcher.cs" />
   </ItemGroup>
   <ItemGroup>
