--- a/src/Cli/Cli.csproj
+++ b/src/Cli/Cli.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyncVerbObtions.cs" />
+    <Compile Include="SyncVerbOptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
