--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CredentialStore.cs" />
     <Compile Include="Debouncer.cs" />
     <Compile Include="GalleryClient.cs" />
+    <Compile Include="PackageJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Watcher.cs" />
