--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -56,6 +56,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Configuration.cs" />
+    <Compile Include="Credential.cs" />
+    <Compile Include="CredentialStore.cs" />
     <Compile Include="Debouncer.cs" />
     <Compile Include="GalleryClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
