Ignore NCrunch folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 build/
 artifacts/
 [Tt]est[Rr]esult.xml
+_NCrunch_*
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
