Implement alias command matcher

--- a/src/Toolbelt.Tests/Toolbelt.Tests.csproj
+++ b/src/Toolbelt.Tests/Toolbelt.Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AliasCommandMatcherTests.cs" />
     <Compile Include="CommandDispatcherTests.cs" />
     <Compile Include="MockExtensions\CommandMatcherExtensions.cs" />
     <Compile Include="MockExtensions\MoqExtensions.cs" />
