--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -61,10 +61,12 @@
     <Compile Include="..\ProductAssemblyInfo.cs">
       <Link>Properties\ProductAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AliasCommandMatcher.cs" />
     <Compile Include="Command.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CommandDispatcher.cs" />
+    <Compile Include="CommandHelpAttribute.cs" />
     <Compile Include="DefaultServices.cs" />
     <Compile Include="DispatchException.cs" />
     <Compile Include="ICommandMatcher.cs">
