--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -75,6 +75,8 @@
     <Compile Include="ICommandMatcher.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IConsole.cs" />
+    <Compile Include="ColoredConsole.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeNameCommandMatcher.cs">
