--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="DefaultServices.cs" />
     <Compile Include="DispatchException.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="ICommandMatcher.cs">
       <SubType>Code</SubType>
     </Compile>
