Implement configuration file support

--- a/src/Toolbelt.Tests/Toolbelt.Tests.csproj
+++ b/src/Toolbelt.Tests/Toolbelt.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AliasCommandMatcherTests.cs" />
     <Compile Include="CommandDispatcherTests.cs" />
     <Compile Include="CommandFramework\OptionSetTests.cs" />
+    <Compile Include="ConfigurationReaderTests.cs" />
     <Compile Include="MockExtensions\CommandMatcherExtensions.cs" />
     <Compile Include="MockExtensions\MoqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
