--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -91,6 +91,11 @@
     <Compile Include="ColoredConsole.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthenticationException.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\Credential.cs" />
+    <Compile Include="Services\CredentialStore.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="TypeNameCommandMatcher.cs">
       <SubType>Code</SubType>
     </Compile>
