--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -91,8 +91,15 @@
     <Compile Include="ColoredConsole.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Watcher.cs" />
     <Compile Include="Services\AuthenticationException.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\Change.cs" />
+    <Compile Include="Services\ChangeAction.cs" />
+    <Compile Include="Services\ChangeBatchRequest.cs" />
+    <Compile Include="Services\ChangeRequest.cs" />
+    <Compile Include="Services\Debouncer.cs" />
+    <Compile Include="Services\GalleryClient.cs" />
     <Compile Include="Services\Credential.cs" />
     <Compile Include="Services\CredentialStore.cs" />
     <Compile Include="Services\LoginService.cs" />
