Start throwing exception when sending changes fails
Better to fail soon than to think everything is OK. Later we can work on
some better error handling.

--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ApiException.cs" />
     <Compile Include="Services\IFileSystem.cs">
       <SubType>Code</SubType>
     </Compile>
