--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Services\PhysicalFileSystem.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Services\Watcher.cs" />
+    <Compile Include="Services\AccountWatcher.cs" />
     <Compile Include="Services\AuthenticationException.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Model\Change.cs" />
@@ -116,6 +116,7 @@
     <Compile Include="Model\Credential.cs" />
     <Compile Include="Services\CredentialStore.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\Watcher.cs" />
     <Compile Include="Services\WatcherFactory.cs">
       <SubType>Code</SubType>
     </Compile>
