--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiException.cs" />
+    <Compile Include="Services\AppWatcher.cs" />
     <Compile Include="Services\IFileSystem.cs">
       <SubType>Code</SubType>
     </Compile>
