--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CommandFramework\ParameterOption.cs" />
     <Compile Include="CommandFramework\DescriptionAttribute.cs" />
     <Compile Include="Commands\HelpCommand.cs" />
+    <Compile Include="Commands\SyncCommand.cs" />
     <Compile Include="Commands\SyncWorkspaceCommand.cs">
       <SubType>Code</SubType>
     </Compile>
