--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -76,6 +76,7 @@
     <Compile Include="CommandFramework\OptionsValidationException.cs" />
     <Compile Include="CommandFramework\ParameterOption.cs" />
     <Compile Include="CommandFramework\DescriptionAttribute.cs" />
+    <Compile Include="Commands\CreateWorkspaceCommand.cs" />
     <Compile Include="Commands\HelpCommand.cs" />
     <Compile Include="Commands\SyncAppCommand.cs" />
     <Compile Include="Commands\SyncCommand.cs" />
@@ -122,6 +123,8 @@
     <Compile Include="Model\Credential.cs" />
     <Compile Include="Services\CredentialStore.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\Requests\CreateWorkspaceRequest.cs" />
+    <Compile Include="Services\Responses\ErrorResponse.cs" />
     <Compile Include="Services\Watcher.cs" />
     <Compile Include="Services\WatcherFactory.cs">
       <SubType>Code</SubType>
