--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -102,6 +102,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="PromptConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiException.cs" />
     <Compile Include="Services\AppWatcher.cs" />
