Allow file system to compute local file states

--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -98,6 +98,7 @@
     <Compile Include="IConsole.cs" />
     <Compile Include="ColoredConsole.cs" />
     <Compile Include="Model\ChangeQueue.cs" />
+    <Compile Include="Model\FileState.cs" />
     <Compile Include="Model\PackageJson.cs">
       <SubType>Code</SubType>
     </Compile>
