--- a/src/Toolbelt/Toolbelt.csproj
+++ b/src/Toolbelt/Toolbelt.csproj
@@ -97,9 +97,11 @@
     </Compile>
     <Compile Include="IConsole.cs" />
     <Compile Include="ColoredConsole.cs" />
+    <Compile Include="Model\ChangeEncoding.cs" />
     <Compile Include="Model\ChangeQueue.cs" />
     <Compile Include="Model\FileConflict.cs" />
     <Compile Include="Model\FileState.cs" />
+    <Compile Include="Model\FinalizedChange.cs" />
     <Compile Include="Model\PackageJson.cs">
       <SubType>Code</SubType>
     </Compile>
